--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "TOKEN": "",
+    "TOKEN": "ODcxMzgwNzI0NzYxMTI0OTE0.YQaeig.lgBcREjZbcwqE9nyyZI-6zoGf8E",
     "logchannel": 1,
     "mutedrole": 1,
-    "suggestionchannel": 1,
+    "suggestionchannel": 935971384767709255,
     "verifyrole": 1,
     "supportcategory": 1
 }
